--- a/salvacss.css
+++ b/salvacss.css
@@ -1,45 +1,47 @@
 
 body{
     width: 800px;
+    margin: 0;
 }
 ol{
-    display:flex;
+    
     gap: 5px;
     font-size: 16px;
     list-style: none;
     border: green 1px solid;
     width: 800px;  
+    text-align: right;
+   display: flex
+   
 }
 li{
-    margin: auto;
+    
     
     font-size: 20px;       
 }
-body{
-    margin: auto;
-
+h1{
+    text-decoration: underline overline 6px wavy red;
+    letter-spacing: 20px;
+    word-spacing: 10px;
 }
+    
+
 a{
-    text-decoration:dashed;
+    text-decoration:dashed; 
     color: black;
 }
-nav{
-    justify-content: center;
-}
+
    
-section{
-    width: 4%;
-    
-    
-}
 
 section{
-    width: 250px;
+    width: 200px;
+
 }
 
 img:nth-child(1){
-    width: 800px;
-    height: 400px;
+    width: 1900px;
+    height: 800px;
+   
 }
 img:nth-child(2){
     width: 600px;
@@ -52,9 +54,47 @@ img:nth-child(3){
 }
 img:nth-child(4){
     width: 600px;
-    display: flex;
+
+
 
 }
 img:nth-child(5){
     width: 600px;
+}
+
+
+
+
+h2{
+    text-align: center;
+    font-size: 16px;
+    color: green;
+
+}
+h3{
+    border: 1px solid red;
+    border-bottom: 1px solid black;
+    color: red;
+    background-color:gray;
+    padding-left: 50px;
+    padding-right: 100px;
+    width: 300px;
+    margin: auto;
+}
+
+
+h3:nth-child(1){
+    color: aqua;
+}
+p.clase{
+    color: darkblue;
+}
+p.clase2{
+    color: pink;
+}
+h2.verde{
+    color: rgb(117, 255, 117);
+}
+h2.morado{
+    color: purple;
 }
