--- a/salvacss.css
+++ b/salvacss.css
@@ -1,108 +1,54 @@
-
 body{
-    width: 800px;
-    
+ 
+  
+    background-repeat: no-repeat;
+    background-image: url(imagenes/fondo.webp);
 }
 ol{
-    
-    gap: 5px;
-    font-size: 16px;
-    list-style: none;
-    border: green 1px solid;
-    width: 800px;  
-    text-align: right;
-   display: flex
+    display: flex;
+    justify-content: right;
+  
    
 }
 li{
+    margin: auto;
+     text-decoration: none;
+    color: rgb(0, 0, 0);
+    list-style: none;
+    font-size: 25px;
+    background-color: rgb(255, 255, 255);
+}
+img{
+    width: 300px;
+    height: 500px; 
+  
+    
+}
+section{
+    display: inline-block;
+  padding: 20px;
+ 
     
     
-    font-size: 20px;       
+
+}
+article{
+   
+    border: 1px solid black;
+    background-color: rgb(255, 255, 255);
+    margin: auto;
+    
+}
+h2{
+    color: rgb(0, 0, 0);
 }
 h1{
-    text-decoration: underline overline 6px wavy red;
-    letter-spacing: 20px;
-    word-spacing: 10px;
+    text-align: center;
+    color: red; 
+}
+div{
+    border: 1px solid black;
+    margin: auto;
 }
     
 
-a{
-    text-decoration:dashed; 
-    color: black;
-}
-
-   
-
-section{
-    width: 200px;
-    margin: auto;
-
-}
-
-img:nth-child(1){
-    width: 1900px;
-    height: 800px;
-    margin: auto;
-   
-}
-img:nth-child(2){
-    width: 600px;
-      margin: auto;
-}
-img:nth-child(3){
-    width: 600px;
-      margin: auto;
-}
-
-#asetto{
-    color: red;
-}
-img:nth-child(4){
-    width: 600px;
-      margin: auto;
-
-
-
-}
-img:nth-child(5){
-    width: 600px;
-      margin: auto;
-}
-
-
-
-
-
-h2{
-    text-align: center;
-    font-size: 16px;
-    color: green;
-
-}
-h3{
-    border: 1px solid red;
-    border-bottom: 1px solid black;
-    color: red;
-    background-color:gray;
-    padding-left: 50px;
-    padding-right: 100px;
-    width: 300px;
-    margin: auto;
-}
-
-
-h3:nth-child(1){
-    color: aqua;
-}
-p.clase{
-    color: darkblue;
-}
-p.clase2{
-    color: pink;
-}
-h2.verde{
-    color: rgb(117, 255, 117);
-}
-h2.morado{
-    color: purple;
-}
