--- a/salvacss.css
+++ b/salvacss.css
@@ -1,6 +1,7 @@
 body{
+    
  
-  
+width: 900x;
     background-repeat: no-repeat;
     background-image: url(imagenes/fondo.webp);
 }
@@ -9,6 +10,9 @@ ol{
     justify-content: right;
   
    
+}
+p{
+    color: white;
 }
 li{
     margin: auto;
@@ -19,28 +23,26 @@ li{
     background-color: rgb(255, 255, 255);
 }
 img{
-    width: 300px;
-    height: 500px; 
+    width: 390px;
+    height: 490px; 
+   
+    
   
     
 }
-section{
-    display: inline-block;
-  padding: 20px;
- 
-    
-    
 
-}
 article{
    
     border: 1px solid black;
     background-color: rgb(255, 255, 255);
-    margin: auto;
+     display: inline-block;
+     margin: auto;
     
 }
+
 h2{
     color: rgb(0, 0, 0);
+    text-align: center;
 }
 h1{
     text-align: center;
@@ -48,7 +50,16 @@ h1{
 }
 div{
     border: 1px solid black;
-    margin: auto;
-}
+   
     
-
+}
+section{
+    padding: 60px;
+    padding-top: 25px;
+    padding-bottom: 64px;
+}
+article:hover{
+    transform: scale(1.1);
+    cursor: pointer;
+ 
+}
