--- a/coches.css
+++ b/coches.css
@@ -1,35 +1,85 @@
-li{
-    margin: auto;
-     text-decoration: none;
-    color: rgb(0, 0, 0);
-    list-style: none;
-    font-size: 25px;
-    background-color: rgb(255, 255, 255);
-}
-ol{
-    display: flex;
-    justify-content: right;
-  
+body {
    
-}
-img{
-    width: 730px;
-    height: 550px;   
-}
-article{
-   
-    border: 1px solid black;
-    background-color: rgb(255, 255, 255);
-     display: inline-block;
-     margin: auto;
-    justify-content: space-between;
-     
     
+    padding: 50px;
+    text-align: center;
+     background-repeat: no-repeat;
+    background-image: url(imagenes/parrilla.jpg);
+    background-size: cover;
 }
 
-h2{
-    text-align: center;
+
+h1 {
+    margin-bottom: 53px;
+    color: white;
 }
-body{
-    padding: 150px;
+
+.coches {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 30px;
+}
+
+.coche {
+    perspective: 1000px;
+}
+
+.carta {
+    position: relative;
+    width: 300px;
+    height: 400px;
+    transform-style: preserve-3d;
+    transition: transform 0.8s ease;
+}
+
+.carta:hover {
+    transform: rotateY(180deg);
+}
+
+.frente, .detras {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    border-radius: 12px;
+    backface-visibility: hidden;
+    overflow: hidden;
+    box-shadow: 0 4px 10px black;
+}
+
+.frente {
+    background: #fff;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.frente img {
+    width: 100%;
+    height: 85%;
+    object-fit: cover;
+}
+
+.frente h3 {
+    margin: 10px 0;
+}
+
+.detras {
+    background: #fff;
+    transform: rotateY(180deg);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+}
+
+.detras h3 {
+    margin-bottom: 10px;
+}
+
+.detras p {
+    font-size: 16px;
+    margin: 5px 0;
 }
