--- a/salvacss.css
+++ b/salvacss.css
@@ -33,10 +33,11 @@ img{
 
 article{
    
-    border: 1px solid black;
+    border: 10px solid black;
     background-color: rgb(255, 255, 255);
      display: inline-block;
      margin: auto;
+     border-radius: 12px;
     
 }
 
@@ -62,4 +63,11 @@ article:hover{
     transform: scale(1.1);
     cursor: pointer;
     color: red;
+}
+
+.menu{
+       display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 30px;
 }
