--- a/lmp2.css
+++ b/lmp2.css
@@ -4,7 +4,7 @@ body {
     padding: 50px;
     text-align: center;
      background-repeat: no-repeat;
-    background-image: url(imagenes/parrilla.jpg);
+    background-image: url(imagenes/parrilla18.jpg);
     background-size: cover;
 }
 
