--- a/hyupercars.css
+++ b/hyupercars.css
@@ -4,7 +4,7 @@ body {
     padding: 50px;
     text-align: center;
      background-repeat: no-repeat;
-    background-image: url(imagenes/parrillita.png);
+    background-image: url(imagenes/lol.jpg);
     background-size: cover;
 }
 
