--- a/tiposcoches.css
+++ b/tiposcoches.css
@@ -1,30 +1,34 @@
 body { 
     padding: 50px;
     text-align: center;
-    background-image: url(imagenes/fondillo.webp);
+    background-image: url(imagenes/fondilloooooooo.jpg);
     background-size: cover;
       background-repeat: no-repeat;
+       
 
 }
 h1 {
     margin-bottom: 53px;
-    color: rgb(0, 0, 0);
+    color: rgb(255, 255, 255);
 }
 section{
     width: 100%;
     display: flex;
+    
     
 }
 img{
     width: 80%;
     height: 550px;
     border-radius: 12px;
-    padding-left: 20px;
+    padding-left: 100px;
+ 
    
 
 }
 article{
     display: flex;
+      
 }
 img:hover{
     transform: scale(1.15);
