--- a/salvacss.css
+++ b/salvacss.css
@@ -1,73 +1,91 @@
-body{
-    
- 
+body {
 
-    background-repeat: no-repeat;
-    background-image: url(imagenes/fondo.webp);
+    padding: 50px;
+    text-align: center;
+     background-repeat: no-repeat;
+    background-image: url(imagenes/lol.jpg);
+    background-size: cover;
+}
+
+
+
+
+.coches {
+    display: flex;
+    flex-wrap: wrap;
+justify-content:center;
+
+   
+}
+
+
+
+.carta {
+ 
+    width: 570px;
+    height: 600px;
+    padding: 10px;
+    border-radius: 12px;
+    margin-top: 200px;
+    margin-bottom: 80px;
+   
+   
+    
+}
+
+.carta:hover {
+    transform: scale(1.15);
+}
+
+
+
+.frente {
+    background: #ffffff;
+    width: 100%;
+   justify-content: center;
+    align-items: center;
+}
+
+.frente img {
+    width: 570px;
+    height: 600px;
+    object-fit: cover;
+}
+
+.frente h3 {
+    margin: 2px 0;
+
 }
 ol{
     display: flex;
-    justify-content: right;
+
+      text-decoration: red solid underline ;
   
-   
-}
-p{
-    color: white;
 }
 li{
-    margin: auto;
-     text-decoration: none;
-    color: rgb(0, 0, 0);
-    list-style: none;
-    font-size: 25px;
-    background-color: rgb(255, 255, 255);
-}
-img{
-    width: 350px;
-    height: 490px; 
-   
-    
+    display: flex;
+    color: white;
+    width: 100%;
+    font-size: 45px;
   
-    
 }
 
-article{
-   
-    border: 10px solid black;
-    background-color: rgb(255, 255, 255);
-     display: inline-block;
-     margin: auto;
-     border-radius: 12px;
-    
+p{
+    color: white;
+    font-size: 36px;
 }
-
-h2{
-    color: rgb(0, 0, 0);
-    text-align: center;
-}
-h1{
-    text-align: center;
-    color: red; 
-}
-div{
+h3{
+    font-size: 35px;
     border: 1px solid black;
-   
-    
-}
-section{
-    padding: 60px;
-    padding-top: 25px;
-    padding-bottom: 64px;
-}
-article:hover{
-    transform: scale(1.1);
-    cursor: pointer;
-    color: red;
 }
 
-.menu{
-       display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    gap: 30px;
+h1 img{
+    width:1100px;
+    height: 350px;
+    padding-top: 3px;
 }
+
+
+
+
+
