--- a/salvacss.css
+++ b/salvacss.css
@@ -24,9 +24,9 @@ justify-content:center;
 
 .carta {
  
-       width: 550px;
-    height: 800px;
-    padding: 10px;
+       width: 400px;
+    height: 550px;
+    padding: 5px;
   
     margin-top: 200px;
     padding-top: 10px;
@@ -56,8 +56,8 @@ justify-content:center;
 
 
 .frente img {
-    width: 550px;
-    height: 700px;
+    width: 400px;
+    height: 550px;
     object-fit: cover;
      border-radius: 12px;
 
@@ -67,7 +67,9 @@ justify-content:center;
 }
 
 .frente h3 {
-    margin: 2px 0;
+    margin: 10px 0;
+    font-size: 22px;
+
 
 }
 ol{
@@ -80,7 +82,7 @@ li{
     display: flex;
     color: white;
     width: 25%;
-    font-size: 45px;
+    font-size: 25px;
   
 }
 
@@ -88,19 +90,27 @@ li{
 
 p{
     color: white;
-    font-size: 36px;
+    font-size: 17px;
 }
 h3{
-    font-size: 35px;
+    font-size: 18px;
  
 }
 
 h1 img{
-    width:1100px;
-    height: 350px;
-    padding-top: 35px;
+    width:800px;
+    height: 250px;
      border-radius: 12px;
+   
 }
+h1 img:hover{
+    box-shadow: 0 0 10px 2px rgba(192, 199, 5, 0.5);
+}
+ 
+   
+     
+
+
 
 
 
