--- a/salvacss.css
+++ b/salvacss.css
@@ -19,19 +19,26 @@ justify-content:center;
 
    
 }
+section:nth-child(1){
+    font-size: 28px;
+  padding-top: 100px;
+   color: white;
+}
+
 
 
 
 .carta {
  
-       width: 400px;
-    height: 550px;
+       width: 420px;
+    height: 560px;
     padding: 5px;
   
-    margin-top: 200px;
+  margin-top: 50px;
     padding-top: 10px;
     padding-left: 10px;
      border-radius: 12px;
+     padding-bottom: 30px;
        
     
     
@@ -56,8 +63,8 @@ justify-content:center;
 
 
 .frente img {
-    width: 400px;
-    height: 550px;
+    width: 420px;
+    height: 560px;
     object-fit: cover;
      border-radius: 12px;
 
@@ -75,15 +82,17 @@ justify-content:center;
 ol{
     display: flex;
 
-      text-decoration: red solid underline ;
+      text-decoration: rgb(255, 0, 0) solid underline ;
   
 }
 li{
     display: flex;
-    color: white;
-    width: 25%;
+    color: rgb(255, 0, 0);
+    width: 30%;
     font-size: 25px;
-  
+    justify-content: center;
+   
+    justify-content: space-between;
 }
 
 
@@ -106,7 +115,7 @@ h1 img{
 h1 img:hover{
     box-shadow: 0 0 10px 2px rgba(192, 199, 5, 0.5);
 }
- 
+
    
      
 
